Ability/type changes

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,96 @@
+Build: 1.14.4-28.1.6 - Tue Sep 17 00:16:04 GMT 2019
+	cpw:
+		Some tweaks around the code base. A functional consumer for networking -
+		return a bool from your consumer function, rather than setPacketHandled.
+		Tweak the server modloading behaviour to try and be a bit clearer that a
+		mod errored.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.5 - Mon Sep 16 21:04:39 GMT 2019
+	Bward7864:
+		Update furnace fuels to not recreate it's list every query, and update
+		when tags are reloaded. Add Tag update events. (#6140)
+
+=========
+Build: 1.14.4-28.1.4 - Mon Sep 16 20:37:06 GMT 2019
+	17338378+Nightenom:
+		Maintain default behavior for Item#canPlayerBreakBlockWhileHolding()
+		(#6128)
+
+=========
+Build: 1.14.4-28.1.3 - Mon Sep 16 20:21:40 GMT 2019
+	Unnoen:
+		Update README badges to fix wrong version. (#6141)
+
+=========
+Build: 1.14.4-28.1.2 - Mon Sep 16 20:03:26 GMT 2019
+	mrcrayfish:
+		Reimplemented "MouseEvent" as RawMouseEvent for 1.14.X (#6144)
+
+=========
+Build: 1.14.4-28.1.1 - Thu Sep 12 18:10:59 GMT 2019
+	diesieben07:
+		Fix patch for vanilla spawning in WorldEntitySpawner (#6130)
+
+=========
+Build: 1.14.4-28.1.0 - Thu Sep 12 16:14:54 GMT 2019
+	lex:
+		Fix Entity.getPersistentData function name. Closes #6131 Bump spec
+		version for first 1.14.4 RB.
+
+=========
+Build: 1.14.4-28.0.107 - Thu Sep 12 16:01:53 GMT 2019
+	JDLogic:
+		Fix ParticleFactoryRegisterEvent not firing (#6126)
+
+=========
+Build: 1.14.4-28.0.106 - Thu Sep 12 15:43:48 GMT 2019
+	gigaherz:
+		Minor fixes to the fluids (#6150)
+		* Fixed vanilla rendering of fluids to take into account the alpha bits
+		of the color, and fix usages accordingly.
+		* Fixed missing texture derp.
+
+=========
+Build: 1.14.4-28.0.105 - Wed Sep 11 14:00:40 GMT 2019
+	gigaherz:
+		Some (sadly breaking) improvements to the Fluid API (#6110)
+		* Some (sadly breaking) improvements to the API, after feedback and
+		concerns provided by users:
+		 - Moved calculation of the translation key to the FluidAttributes
+		constructor, so that builders can be shared between still & flowing
+		sub-fluids.
+		 - Moved biome-based coloring to a dedicated FluidAttributes.Water
+		variant, which is not used by default.
+		 - Added logic to automatically gather fluid textures into the list of
+		textures to bake.
+		 - Patched BucketItem and FlowingFluidBlock to avoid eager access to the
+		fluid objects.
+		 - Added a ForgeFlowingFluid class, as a more user-friendly way to
+		construct a new FlowingFluid.
+
+=========
+Build: 1.14.4-28.0.104 - Tue Sep 10 23:02:31 GMT 2019
+	lex:
+		Delay Block loot table name generation until needed, as calling early
+		will result in an empty name as the block is not registered yet.
+
+	lex:
+		Add new DeferredRegistry helper, and change RegistryObject to update
+		when overrides are registered.
+
+=========
+Build: 1.14.4-28.0.102 - Mon Sep 09 22:30:19 GMT 2019
+	lex:
+		Fix slimes splitting more times then they should. Closes #6138
+
+=========
+Build: 1.14.4-28.0.101 - Mon Sep 09 03:32:59 GMT 2019
+	tterrag:
+		Fix a couple places not calling forge getLightValue
+
+=========
 Build: 1.14.4-28.0.100 - Sun Sep 08 06:23:38 GMT 2019
 	cpw:
 		Fix problem with network connections timing out frequently. Turns out
